--- a/src/PhoneBook/Header/Header.module.css
+++ b/src/PhoneBook/Header/Header.module.css
@@ -6,9 +6,14 @@
 }
 
 .nav__link {
+  margin-right: auto;
   color: #fff;
   text-decoration: none;
   font-size: 25px;
   font-weight: 700;
   margin: 0 40px;
+}
+.active {
+  color: black;
+   margin-right: auto;
 }
